fix #16 image not vertically aligned

--- a/src/components/banner-card/banner-card.less
+++ b/src/components/banner-card/banner-card.less
@@ -57,6 +57,8 @@
       
       div {
         margin: 0 !important;
+        display: flex;
+        justify-content: center;
       }
 
       img {
@@ -123,7 +125,7 @@
   align-items: flex-end;
   padding: 0px;
   margin-top: 10px;
-  
+
   button {
     border-color: white;
   }
